Adding other db and paths

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
         <img src="../static/img/logo_cor.png" alt="">
         <ul class="ul-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="#cursos">Cursos</a></li>
+            <li><a href="/cursos">Cursos</a></li>
         </ul>
         
         <ul class="ul-actions">
@@ -38,12 +38,12 @@
     <main>
         <div class="curso1">
             <h2>Curso JavaScript</h2>
-            <a href="/cadastrar"><img src="../static/img/curso_javascript.jpg" width="500px" alt=""></a>
+            <a href="/cadastrar"><img src="../static/img/curso_javascript.jpg" width="400px" alt=""></a>
             <a href="/cadastrar">Matricule-se agora!</a>
         </div>
         <div class="curso2">
             <h2>Curso Instalação e Manuntenção de Computadores</h2>
-            <a href="/cadastrar"><img src="../static/img/curso_man.jpg" width="500px"></a>
+            <a href="/cadastrar"><img src="../static/img/curso_man.jpg" width="400px"></a>
             <a href="/cadastrar">Matricule-se agora!</a>
         </div>
     </main>
