--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
             <label for="email" class="lb">E-mail: </label>
             <input type="email" name="email" class="input">
             <br>
-            <label for="pwd" class="lb">E-mail: </label>
+            <label for="pwd" class="lb">Senha: </label>
             <input type="password" name="password" class="input">
             <br>
             <input type="submit" value="Login" class="sub_button">
