--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -87,21 +87,21 @@ main{
     justify-content: center;
     grid-template-columns: 1fr 1fr;
 }
-.curso1, .curso2{
+.curso{
     display: grid;
     margin: 0 auto;
     margin-top: 30px;
 }
 
-.curso1 h2, .curso2 h2{
+.curso h2{
     color: #f5f5f5;
     text-align: center;
 }
-.curso2 h2{
+.curso h2{
     font-size: 14pt;
 }
 
-.curso1 a:nth-child(3), .curso2 a:nth-child(3){
+.curso a:nth-child(3){
     color: #f5f5f5;
     text-align: center;
     text-decoration: none;
@@ -111,7 +111,7 @@ main{
     padding: 10px;
 }
 
-.curso1 a:nth-child(3):hover, .curso2 a:nth-child(3):hover{
+.curso1 a:nth-child(3):hover{
     color: #f5f5f5;
     background-color: #171347;
     transition: 0.75s ease;
