--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
             <br>
             <input type="submit" value="Login" class="sub_button">
 
-            <a href="/cadastro">Não possui cadastro? <span>Cadastre-se</span></a>
+            <a href="/cadastrar">Não possui cadastro? <span>Cadastre-se</span></a>
         </form>
     </div>
 </body>
