--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -111,7 +111,7 @@ main{
     padding: 10px;
 }
 
-.curso1 a:nth-child(3):hover{
+.curso a:nth-child(3):hover{
     color: #f5f5f5;
     background-color: #171347;
     transition: 0.75s ease;
@@ -179,3 +179,4 @@ form a span{
     text-decoration: underline;
     margin-left: 5px;
 }
+
