--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
         <div class="curso">
             <h2>{{ curso.name }}</h2>
             <img src="data:image/jpeg;base64,{{ data_base64 }}" width="400px" alt="">
-            <a href="/login">Matricule-se agora!</a>
+            <a class="a-login" href="/login">Matricule-se agora!</a>
         </div>
         {% endfor %}
     </main>
