--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -20,7 +20,7 @@
                 <p>Olá, {{ current_user.name }} 👋</p>
                 <li><a href="/logout">Sair</a></li>
             {% else %}
-                <li><a href="/login">Entrar</a></li>
+                <li><a href="/login">Login</a></li>
                 <li><a href="/cadastrar">Cadastrar</a></li>
             {% endif %}
         </ul>
