--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -93,7 +93,7 @@ main{
     margin-top: 30px;
 }
 
-.curso h2{
+.curso h2, h1{
     color: #f5f5f5;
     text-align: center;
 }
@@ -101,12 +101,38 @@ main{
     font-size: 14pt;
 }
 
+
+
+.curso p{
+    color:#f5f5f5;
+    margin-top: 10px;
+    font-size: 12pt;
+}
+
+.curso .matriculado{
+    color: #56eb5d;
+}
+
+
+main a{
+    display: flex;
+    color: #f5f5f5;
+    margin-top: 50px;
+    text-align: center;
+    text-decoration: none;
+    font: 14pt 'Nunito';
+    width: 40%;
+    height: 45%;
+    border: 2px solid #f5f5f5;
+    padding: 10px;
+}
+
 .curso a:nth-child(3){
     color: #f5f5f5;
     text-align: center;
     text-decoration: none;
     font: 14pt 'Nunito';
-    width: 40%;
+    width: 50%;
     border: 2px solid #f5f5f5;
     padding: 10px;
 }
@@ -115,6 +141,14 @@ main{
     color: #f5f5f5;
     background-color: #171347;
     transition: 0.75s ease;
+}
+.curso .do-login{
+    display: inline-block;
+    border: none;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    text-decoration:underline;
 }
 
 .main{
