--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="../static/img/logo_cor.png" alt="">
         <ul class="ul-nav">
-            <li><a href="/">Home</a></li>
+            <li><a class="activated" href="/">Home</a></li>
             <li class="activated"><a href="/cursos">Cursos</a></li>
         </ul>
         
