--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -41,7 +41,6 @@ nav{
 }
 
 .ul-nav li a:focus,
-.ul-nav li:first-child,
 .ul-nav li:hover{
     background-color: #171347;
     transition: 0.75s ease;
@@ -104,6 +103,7 @@ main{
 
 
 .curso p{
+    text-align: center;
     color:#f5f5f5;
     margin-top: 10px;
     font-size: 12pt;
@@ -142,6 +142,8 @@ main a{
     background-color: #171347;
     transition: 0.75s ease;
 }
+
+
 .curso .do-login{
     display: inline-block;
     border: none;
@@ -162,6 +164,17 @@ main a{
     padding: 30px;
     border: 2px solid #f5f5f5;
     border-radius: 10px;
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 0.5px );
+    -webkit-backdrop-filter: blur( 0.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.main form h2{
+    color: #f5f5f5;
+    font-family: 'Nunito';
 }
 
 form > img{
@@ -214,3 +227,17 @@ form a span{
     margin-left: 5px;
 }
 
+
+input[type=file]{
+    display: none;
+}
+
+
+.lb-file{
+    display: flex;
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    color: #f5f5f5;
+}
