Fix cursos css button + curso

--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -29,8 +29,10 @@
 
             </div>
             {% endfor %}
-            
-            <a href="/cadastro/curso">+ Cadastrar novo curso.</a>
+        
     </main>
+    <footer>
+        <a href="/cadastro/curso">+ Cadastrar novo curso.</a>
+    </footer>
 </body>
 </html>
