--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -100,8 +100,6 @@ main{
     font-size: 14pt;
 }
 
-
-
 .curso p{
     text-align: center;
     color:#f5f5f5;
@@ -112,7 +110,6 @@ main{
 .curso .matriculado{
     color: #56eb5d;
 }
-
 
 main a{
     display: flex;
@@ -245,4 +242,21 @@ input[type=file]{
     padding: 6px 12px;
     cursor: pointer;
     color: #f5f5f5;
+}
+
+footer{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin: 50px;
+}
+
+footer a{
+    color: #f5f5f5;
+    text-align: center;
+    text-decoration: none;
+    font: 14pt 'Nunito';
+    width: 20%;
+    border: 2px solid #f5f5f5;
+    padding: 10px;
 }
